parser/test_data/syntaxTests/inlineAssembly/function_call_not_found.sol
contract C {
  function f() public pure {
    assembly {
      K()
    }
  }
}
// ----
// DeclarationError 4619: (63-64): Function "K" not found.
